language_tests/outputs/invalid/operators.out
error: cannot apply binary operator 'BitAnd' to types double and double
 -> language_tests/source_files/invalid/operators.tr:3:12
	    let _ = 1.0 & 2.0
	            ^^^^^^^^^
error: cannot apply binary operator 'BitOr' to types double and double
 -> language_tests/source_files/invalid/operators.tr:8:12
	    let _ = 1.0 | 2.0
	            ^^^^^^^^^
error: cannot apply binary operator 'BitXor' to types double and double
 -> language_tests/source_files/invalid/operators.tr:9:12
	    let _ = 1.0 ^ 2.0
	            ^^^^^^^^^
error: cannot apply binary operator 'BitShl' to types double and int32
 -> language_tests/source_files/invalid/operators.tr:10:12
	    let _ = 1.0 << 1
	            ^^^^^^^^
